--- a/FE/index.html
+++ b/FE/index.html
@@ -481,7 +481,7 @@
                                 <a class="nav-link" href="./index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/classes?sort=newest">Courses</a>
+                                <a class="nav-link" href="./course.html">Courses</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/instructors">Instructors</a>
@@ -497,11 +497,11 @@
 
                     <div class="nav-icons-or-start-live navbar-order">
 
-                        <a href="/login" class="d-none d-lg-flex btn btn-sm btn-primary nav-start-a-live-btn">
+                        <a href="login.html" class="d-none d-lg-flex btn btn-sm btn-primary nav-start-a-live-btn">
                             Start a new course
                         </a>
 
-                        <a href="/login" class="d-flex d-lg-none text-primary nav-start-a-live-btn font-14">
+                        <a href="login.html" class="d-flex d-lg-none text-primary nav-start-a-live-btn font-14">
                             Start a new course
                         </a>
 
