--- a/FE/term&rule.html
+++ b/FE/term&rule.html
@@ -12,9 +12,12 @@
 
     <meta name='robots' content="index, follow, all">
 
-    <meta name="description" content="contact page Description">
-    <meta property="og:description" content="contact page Description">
-    <meta name='twitter:description' content='contact page Description'>
+    <meta name="description"
+        content="Our mission is to improve lives through learning. We enable anyone anywhere to create and share educational content (instructors) and to access that educational content to learn.">
+    <meta property="og:description"
+        content="Our mission is to improve lives through learning. We enable anyone anywhere to create and share educational content (instructors) and to access that educational content to learn.">
+    <meta name='twitter:description'
+        content='Our mission is to improve lives through learning. We enable anyone anywhere to create and share educational content (instructors) and to access that educational content to learn.'>
 
     <link rel='shortcut icon' type='image/x-icon' href="https://lms.rocket-soft.org/store/1/favicon.png">
     <link rel="manifest" href="mix-manifest.json?v=4">
@@ -37,9 +40,9 @@
     <link rel="home" href="https://lms.rocket-soft.org">
 
     <!-- Open Graph -->
-    <meta property='og:title' content='Contact'>
+    <meta property='og:title' content='Terms of Service'>
     <meta name='twitter:card' content='summary'>
-    <meta name='twitter:title' content='Contact'>
+    <meta name='twitter:title' content='Terms of Service'>
 
     <meta property='og:site_name' content='https://lms.rocket-soft.org/Rocket LMS'>
     <meta property='og:image' content='https://lms.rocket-soft.org/store/1/favicon.png'>
@@ -47,7 +50,7 @@
     <meta property='og:locale' content='https://lms.rocket-soft.org/en_US'>
     <meta property='og:type' content='website'>
 
-    <title>Contact | Rocket LMS</title>
+    <title>Terms of Service | Rocket LMS</title>
 
     <!-- General CSS File -->
     <link href="assets/default/css/font.css" rel="stylesheet">
@@ -57,7 +60,6 @@
     <link rel="stylesheet" href="assets/default/css/app.css">
 
 
-    <link rel="stylesheet" href="assets/vendors/leaflet/leaflet.css">
 
     <style>
 
@@ -299,8 +301,8 @@
                     </div>
 
                     <div class="d-flex align-items-center ml-md-50">
-                        <a href="./login.html" class="py-5 px-10 mr-10 text-dark-blue font-14">Login</a>
-                        <a href="./signup.html" class="py-5 px-10 text-dark-blue font-14">Register</a>
+                        <a href="login" class="py-5 px-10 mr-10 text-dark-blue font-14">Login</a>
+                        <a href="register" class="py-5 px-10 text-dark-blue font-14">Register</a>
                     </div>
                 </div>
             </div>
@@ -569,204 +571,50 @@
         </nav>
 
 
-        <section class="site-top-banner search-top-banner opacity-04 position-relative">
-            <img src="store/1/default_images/category_cover.png" class="img-cover" alt="Contact" />
-
+        <section class="cart-banner position-relative text-center">
             <div class="container h-100">
-                <div class="row contact-us-head h-100 justify-content-center text-center">
+                <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="col-12 col-md-9 col-lg-7">
-                        <div class="top-search-categories-form">
-                            <h1 class="text-white font-30 mb-15">Contact US</h1>
-                        </div>
+                        <h1 class="font-30 text-white font-weight-bold">Terms of Service</h1>
                     </div>
                 </div>
             </div>
         </section>
 
-        <div class="container">
-            <section class="">
-                <div class="contact-map leaflet-container leaflet-touch leaflet-fade-anim leaflet-touch-zoom"
-                    id="contactMap" data-latitude="43.45905" data-longitude="11.87300" data-zoom="16" tabindex="0"
-                    style="outline: none;">
-                    <div class="leaflet-pane leaflet-map-pane" style="transform: translate3d(-185px, -72px, 0px);">
-                        <div class="leaflet-pane leaflet-tile-pane">
-                            <div class="leaflet-layer " style="z-index: 1; opacity: 1;">
-                                <div class="leaflet-tile-container leaflet-zoom-animated"
-                                    style="z-index: 18; transform: translate3d(0px, 0px, 0px) scale(1);">
-                                    <img alt="" role="presentation"
-                                        src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/tiles/15/17464/11982?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw"
-                                        class="leaflet-tile leaflet-tile-loaded"
-                                        style="width: 512px; height: 512px; transform: translate3d(193px, -308px, 0px); opacity: 1;">
-                                    <img alt="" role="presentation"
-                                        src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/tiles/15/17464/11983?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw"
-                                        class="leaflet-tile leaflet-tile-loaded"
-                                        style="width: 512px; height: 512px; transform: translate3d(193px, 204px, 0px); opacity: 1;">
-                                    <img alt="" role="presentation"
-                                        src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/tiles/15/17463/11982?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw"
-                                        class="leaflet-tile leaflet-tile-loaded"
-                                        style="width: 512px; height: 512px; transform: translate3d(-319px, -308px, 0px); opacity: 1;">
-                                    <img alt="" role="presentation"
-                                        src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/tiles/15/17465/11982?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw"
-                                        class="leaflet-tile leaflet-tile-loaded"
-                                        style="width: 512px; height: 512px; transform: translate3d(705px, -308px, 0px); opacity: 1;">
-                                    <img alt="" role="presentation"
-                                        src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/tiles/15/17463/11983?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw"
-                                        class="leaflet-tile leaflet-tile-loaded"
-                                        style="width: 512px; height: 512px; transform: translate3d(-319px, 204px, 0px); opacity: 1;">
-                                    <img alt="" role="presentation"
-                                        src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/tiles/15/17465/11983?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw"
-                                        class="leaflet-tile leaflet-tile-loaded"
-                                        style="width: 512px; height: 512px; transform: translate3d(705px, 204px, 0px); opacity: 1;">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="leaflet-pane leaflet-shadow-pane">
-
-                        </div>
-                        <div class="leaflet-pane leaflet-overlay-pane">
-
-                        </div>
-                        <div class="leaflet-pane leaflet-marker-pane">
-                            <img src="assets/default/img/location.png"
-                                class="leaflet-marker-icon leaflet-zoom-animated leaflet-interactive" alt=""
-                                tabindex="0"
-                                style="margin-left: -29.459px; margin-top: -11.873px; transform: translate3d(555px, 322px, 0px); z-index: 322;">
-                        </div>
-                        <div class="leaflet-pane leaflet-tooltip-pane">
-
-                        </div>
-                        <div class="leaflet-pane leaflet-popup-pane">
-
-                        </div>
-                        <div class="leaflet-proxy leaflet-zoom-animated"
-                            style="transform: translate3d(8.94193e+06px, 6.13541e+06px, 0px) scale(32768);"></div>
-                    </div>
-                    <div class="leaflet-control-container">
-                        <div class="leaflet-top leaflet-left"></div>
-                        <div class="leaflet-top leaflet-right"></div>
-                        <div class="leaflet-bottom leaflet-left"></div>
-                        <div class="leaflet-bottom leaflet-right">
-                            <div class="leaflet-control-attribution leaflet-control"><a href="http://leafletjs.com"
-                                    title="A JS library for interactive maps">Leaflet</a> | ©
-                                <a target="_blank" rel="nofollow"
-                                    href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>
-                            </div>
-                        </div>
+        <section class="container mt-10 mt-md-40">
+            <div class="row">
+                <div class="col-12">
+                    <div class="post-show mt-30">
+                        <p><b>Note: This is just demo data.</b></p>
+                        <p>Our mission is to improve lives through learning. We enable anyone anywhere to create and
+                            share educational content (instructors) and to access that educational content to learn
+                            (students). We consider our marketplace model the best way to offer valuable educational
+                            content to our users. We need rules to keep our platform and services safe for you, us, and
+                            our student and instructor community. These Terms apply to all your activities on the Udemy
+                            website, the Udemy mobile applications, our TV applications, our APIs, and other related
+                            services (“<b>Services</b>”).</p>
+                        <p>If you publish content on our platform, you must also agree to the Instructor Terms. We also
+                            provide details regarding our processing of the personal data of our students and
+                            instructors in our Privacy Policy. If you are using our platform for Business as part of
+                            your organization’s Udemy for Business subscription, you should consult our Udemy for
+                            Business Privacy Statement.</p>
+                        <p style="text-align: center; "><img src="store/1/default_images/blogs/home2.png"
+                                style="width: 954px;"><br></p>
+                        <p>You need an account for most activities on our platform, including to <b>purchase</b> and
+                            access content or to <b>submit content for publication</b>. When setting up and maintaining
+                            your account, you must provide and continue to provide accurate and complete information,
+                            including a valid email address. You have complete responsibility for your account and
+                            everything that happens on your account, including for any harm or damage (to us or anyone
+                            else) caused by someone using your account without your permission. This means you need to
+                            be careful with your password. You may not transfer your account to someone else or use
+                            someone else’s account. If you contact us to request access to an account, we will not grant
+                            you such access unless you can provide us with the information that we need to prove you are
+                            the owner of that account. In the event of the death of a user, the account of that user
+                            will be closed.</p>
                     </div>
                 </div>
-
-                <div class="row">
-                    <div class="col-12 col-md-4">
-                        <div class="contact-items mt-30 rounded-lg py-20 py-md-40 px-15 px-md-30 text-center">
-                            <div
-                                class="contact-icon-box box-info p-20 d-flex align-items-center justify-content-center mx-auto">
-                                <i data-feather="map-pin" width="50" height="50" class="text-white"></i>
-                            </div>
-
-                            <h3 class="mt-30 font-16 font-weight-bold text-dark-blue">Address</h3>
-                            <p class="font-weight-500 font-14 text-gray mt-10">4193 Roosevelt Street<br />
-                                San Francisco, CA 94103</p>
-                        </div>
-                    </div>
-
-                    <div class="col-12 col-md-4">
-                        <div class="contact-items mt-30 rounded-lg py-20 py-md-40 px-15 px-md-30 text-center">
-                            <div
-                                class="contact-icon-box box-green p-20 d-flex align-items-center justify-content-center mx-auto">
-                                <i data-feather="phone" width="50" height="50" class="text-white"></i>
-                            </div>
-
-                            <h3 class="mt-30 font-16 font-weight-bold text-dark-blue">Phone</h3>
-                            <p class="font-weight-500 text-gray font-14 mt-10">415-716-1166 <br /> 415-716-1167</p>
-                        </div>
-                    </div>
-
-                    <div class="col-12 col-md-4">
-                        <div class="contact-items mt-30 rounded-lg py-20 py-md-40 px-15 px-md-30 text-center">
-                            <div
-                                class="contact-icon-box box-red p-20 d-flex align-items-center justify-content-center mx-auto">
-                                <i data-feather="mail" width="50" height="50" class="text-white"></i>
-                            </div>
-
-                            <h3 class="mt-30 font-16 font-weight-bold text-dark-blue">Email</h3>
-                            <p class="font-weight-500 text-gray font-14 mt-10">mail@lms.rocket-soft.org <br />
-                                info@lms.rocket-soft.org</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section class="mt-30 mt-md-50">
-                <h2 class="font-16 font-weight-bold text-secondary">Send your message directly</h2>
-
-
-                <form action="/contact/store" method="post" class="mt-20">
-                    <input type="hidden" name="_token" value="pG24Dlb6XajYrrjAAV2geoxYYWYimH0Ge5QG0xUk">
-
-                    <div class="row">
-                        <div class="col-12 col-md-6">
-                            <div class="form-group">
-                                <label class="input-label font-weight-500">Your name</label>
-                                <input type="text" name="name" value="" class="form-control " />
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <div class="form-group">
-                                <label class="input-label font-weight-500">Email</label>
-                                <input type="text" name="email" value="" class="form-control " />
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-12 col-md-6">
-                            <div class="form-group">
-                                <label class="input-label font-weight-500">Phone</label>
-                                <input type="text" name="phone" value="" class="form-control " />
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <div class="form-group">
-                                <label class="input-label font-weight-500">Subject</label>
-                                <input type="text" name="subject" value="" class="form-control " />
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="form-group">
-                                <label class="input-label font-weight-500">Message</label>
-                                <textarea name="message" id="" rows="10" class="form-control "></textarea>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-12 col-md-6">
-                            <div class="form-group">
-                                <label class="input-label font-weight-500">Captcha</label>
-                                <div class="row align-items-center">
-                                    <div class="col">
-                                        <input type="text" name="captcha" class="form-control ">
-                                    </div>
-                                    <div class="col d-flex align-items-center">
-                                        <img id="captchaImageComment" class="captcha-image" src="">
-
-                                        <button type="button" id="refreshCaptcha" class="btn-transparent ml-15">
-                                            <i data-feather="refresh-ccw" width="24" height="24" class=""></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <button type="submit" class="btn btn-primary mt-20">Send Message</button>
-                </form>
-            </section>
-
-        </div>
+            </div>
+        </section>
 
         <footer class="footer bg-secondary position-relative user-select-none">
             <div class="container">
@@ -936,9 +784,7 @@
     </script>
 
 
-    <script src="assets/vendors/leaflet/leaflet.min.js"></script>
 
-    <script src="assets/default/js/parts/contact.min.js"></script>
     <link href="assets/default/vendors/flagstrap/css/flags.css" rel="stylesheet">
     <script src="assets/default/vendors/flagstrap/js/jquery.flagstrap.min.js"></script>
     <script src="assets/default/js/parts/top_nav_flags.min.js"></script>
